--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.23)
 
 add_executable(
     ed-test
-    test-ed.cpp
+    test-state.cpp
 )
 
 target_include_directories(ed-test PRIVATE .)
