--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,9 @@ cmake_minimum_required(VERSION 3.23)
 find_package(OpenMP REQUIRED)
 find_package(Eigen3 REQUIRED)
 find_package(Spectra REQUIRED)
+list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake/Modules")
+find_package(OpenBLAS REQUIRED)
+
 
 add_executable(
     ed
@@ -22,6 +25,7 @@ target_include_directories(
   PUBLIC
   /usr/include/eigen3
   /usr/include/Spectra
+  ${OpenBLAS_INCLUDE_DIR}
   .
 )
 
@@ -36,5 +40,7 @@ target_link_libraries(
     ed-lib
     PUBLIC
     OpenMP::OpenMP_CXX
+    ${OpenBLAS_LIB}
+    gfortran
 )
 
