--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,11 +1,18 @@
 cmake_minimum_required(VERSION 3.23)
 
 add_executable(
-    ed-test
-    test-state.cpp
-    test-combinations.cpp
-    test-binomial.cpp
-    test-hamiltonian.cpp
+  ed-test
+  test-state.cpp
+  test-combinations.cpp
+  test-binomial.cpp
+  test-hamiltonian.cpp
+  test-momentum-space.cpp
+)
+
+target_compile_options(
+  ed-test
+  PUBLIC
+  "${ED_CXX_COMPILER_OPTIONS}"
 )
 
 target_include_directories(
